export switch_lr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(pairs_make)
 export(pairs_plot_inclusions)
 export(plot_pairs)
 export(reverse_duplicates)
+export(switch_lr)
 export(test_min_separation)
