pair.generator 0.2.0 pairs_generate() and chain()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(chain)
 export(duplicates)
 export(pairs_all)
 export(pairs_export)
+export(pairs_generate)
 export(pairs_import.csv)
 export(pairs_make)
 export(pairs_plot_inclusions)
