--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,15 @@ Author: Ken Bredemeyer
 Maintainer: Ken Bredemeyer <21833472@student.uwa.edu.au>
 Description: Pairwise comparison involves side by side comparisons of two 
     objects or performances at a time.
+Depends: R (>= 3.0.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Suggests:
     knitr (>= 1.19),
-    testthat
+    testthat,
+    dplyr
 VignetteBuilder: knitr
+Imports: graphics,
+    utils
