--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,21 @@
 Package: pair.generator
 Type: Package
 Title: Pair performances for assessment using pairwise comparisons
-Version: 0.2.2
+Version: 0.3.0
 Author: Ken Bredemeyer
 Maintainer: Ken Bredemeyer <21833472@student.uwa.edu.au>
 Description: Pairwise comparison involves side by side comparisons of two 
     objects or performances at a time.
 Depends: R (>= 3.0.0)
-License: GPL-3
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
 Suggests:
     knitr (>= 1.19),
     testthat,
-    dplyr
+    dplyr (>= 0.6.0)
 VignetteBuilder: knitr
-Imports: graphics,
-    utils
+Imports: graphics (>= 3.0.0),
+    utils (>= 3.0.0),
+    stats (>= 3.0.0)
