--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: pair.generator
 Type: Package
 Title: Pair performances for assessment using pairwise comparisons
-Version: 0.3.0
+Version: 0.3.2
 Author: Ken Bredemeyer
-Maintainer: Ken Bredemeyer <21833472@student.uwa.edu.au>
-Description: Pairwise comparison involves side by side comparisons of two 
+Maintainer: Ken Bredemeyer <kbredemeyer@iinet.net.au>
+Description: Pairwise comparisons involve side by side comparisons of two 
     objects or performances at a time.
 Depends: R (>= 3.0.0)
-License: GPL-3 + file LICENSE
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
